force-app/main/default/objects/Contacto_de_paciente__c/Contacto_de_paciente__c.object-meta.xml
<CustomObject>
    <label>Contacto de paciente</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Número de Contacto de paciente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contactos de paciente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>