force-app/main/default/objects/Contacto_de_paciente__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contacto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contacto de paciente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pacientes</relationshipLabel>
    <relationshipName>Contactos_de_paciente</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>