force-app/main/default/objects/Contacto_de_paciente__c/fields/Otro__c.field-meta.xml
<CustomField>
    <fullName>Otro__c</fullName>
    <label>Otro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>