force-app/main/default/objects/Contacto_de_paciente__c/validationRules/Otra_relacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Otra_relacion</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL( Relacion__c, &apos;Otro&apos;)) &amp;&amp; NOT(ISBLANK(Otro__c))</errorConditionFormula>
    <errorDisplayField>Otro__c</errorDisplayField>
    <errorMessage>No puede llenar este campo si la relación no es &apos;Otro&apos;</errorMessage>
</ValidationRule>