force-app/main/default/objects/Contacto_de_paciente__c/validationRules/Un_contacto_principal.validationRule-meta.xml
<ValidationRule>
    <fullName>Un_contacto_principal</fullName>
    <active>true</active>
    <errorConditionFormula>Paciente__r.Contactos_principales__c &gt;= 1 &amp;&amp;  Principal__c = true</errorConditionFormula>
    <errorDisplayField>Principal__c</errorDisplayField>
    <errorMessage>El paciente no puede tener más de un contacto principal</errorMessage>
</ValidationRule>